--- a/Econometrics/Homework/Homework_2.qmd
+++ b/Econometrics/Homework/Homework_2.qmd
@@ -73,45 +73,98 @@ $$ \frac{1}{n} \sum_{i=1}^{n} (X_i - \bar{X}_n)^2 \rightarrow (X_i - \hat{X}_n)^
 
 Then we can expand the equation:
 
-$$ (X_i - \hat{X}_n)^2 = X_i^2 - 2X_i\hat{X}_n + \hat{X}_n^2 \tag {1.2} $$
+$$ (X_i - \bar{X}_n)^2 = X_i^2 - 2X_i\bar{X}_n + \bar{X}_n^2 \tag {1.2} $$
 
 thus, we can rewrite the equation as:
 
-$$ \frac{1}{n} \sum_{i=1}^{n} (X_i - \bar{X})_n^2 = \frac{1}{n} \sum_{i=1}^{n} X_i^2 - 2X_i\hat{X}_n + \hat{X}_n^2 \tag {1.3} $$ 
+$$ \frac{1}{n} \sum_{i=1}^{n} (X_i - \bar{X})_n^2 = \frac{1}{n} \sum_{i=1}^{n} X_i^2 - 2X_i\bar{X}_n + \bar{X}_n^2 \tag {1.3} $$ 
 
 Then we separate the terms:
 
-$$ \frac{1}{n} \sum_{i=1}^{n} X_i^2 - \frac{2 \hat{X}_n}{n} \sum_{i=1}^{n} X_i+ \frac{\hat{X}_n^2}{n} \sum_{i=1}^{n} 1 \tag {1.4} $$
+$$ \frac{1}{n} \sum_{i=1}^{n} X_i^2 - \frac{2 \bar{X}_n}{n} \sum_{i=1}^{n} X_i+ \frac{\bar{X}_n^2}{n} \sum_{i=1}^{n} 1 \tag {1.4} $$
 
-Then since $\sum_{i=1}^{n} X_i = n\hat{X}_n$, and $\sum_{i=1}^{n} 1 = n$, this just becomes:
+Then since $\sum_{i=1}^{n} X_i = n\bar{X}_n$, and $\sum_{i=1}^{n} 1 = n$, this just becomes:
 
-$$ \frac{1}{n} \sum_{i=1}^{n} X_i^2 - 2\hat{X}_n \hat{X}_n + \hat{X}_n^2 = \frac{1}{n} \sum_{i=1}^{n} X_i^2 - \hat{X}_n^2 \tag {1.5} $$ 
+$$ \frac{1}{n} \sum_{i=1}^{n} X_i^2 - 2\bar{X}_n \bar{X}_n + \bar{X}_n^2 = \frac{1}{n} \sum_{i=1}^{n} X_i^2 - \bar{X}_n^2 \tag {1.5} $$ 
 
 Now we can look at the right side of the equation:
 
-$$ \frac{1}{n} \sum_{i=1}^{n} X_i(X_i - \bar{X}_n) \rightarrow X_i(X_i - \hat{X}_n) \tag {1.6} $$ 
+$$ \frac{1}{n} \sum_{i=1}^{n} X_i(X_i - \bar{X}_n) \rightarrow X_i(X_i - \bar{X}_n) \tag {1.6} $$ 
 
 Then we can expand the equation:
 
-$$ X_i(X_i - \hat{X}_n) = X_i^2 - X_i\hat{X}_n \tag {1.7} $$
+$$ X_i(X_i - \bar{X}_n) = X_i^2 - X_i\bar{X}_n \tag {1.7} $$
 
 thus, we can rewrite the equation as:
 
-$$ \frac{1}{n} \sum_{i=1}^{n} X_i(X_i - \bar{X}_n) = \frac{1}{n} \sum_{i=1}^{n} X_i^2 - \frac{\hat{X}_n}{n} \sum_{i=1}^{n} X_i \tag {1.8} $$ 
+$$ \frac{1}{n} \sum_{i=1}^{n} X_i(X_i - \bar{X}_n) = \frac{1}{n} \sum_{i=1}^{n} X_i^2 - \frac{\bar{X}_n}{n} \sum_{i=1}^{n} X_i \tag {1.8} $$ 
 Then we can use the same logic as before:
 
-$$ \frac{1}{n} \sum_{i=1}^{n} X_i^2 - \hat{X}_n \hat{X_n} = \frac{1}{n} \sum_{i=1}^{n} X_i^2 - \hat{X}_n^2 \tag {1.9} $$ 
+$$ \frac{1}{n} \sum_{i=1}^{n} X_i^2 - \bar{X}_n \bar{X_n} = \frac{1}{n} \sum_{i=1}^{n} X_i^2 - \bar{X}_n^2 \tag {1.9} $$ 
 
 Thus, we have shown that the left side of the equation is equal to the right side of the equation.
 
 $$\frac{1}{n} \sum_{i=1}^{n} (X_i - \bar{X_n})^2 = \frac{1}{n} \sum_{i=1}^{n} X_i(X_i - \bar{X}_n) \tag {1}$$
 
-\newpage
-
 ## Excersice 1 cont: Showing that the second equality holds:
 
 
 $$\frac{1}{n} \sum_{i=1}^{n} (X_i - \bar{X}_n)(Y_i-\bar{Y}_n) = \frac{1}{n} \sum_{i=1}^{n} X_i (Y_i - \bar{Y}_n) = \frac{1}{n} \sum_{i=1}^{n} Y_i (X_i - \bar{X}_n) \tag {2}$$
+
+Let's start by looking at the left side of the equation:
+
+$$ \frac{1}{n} \sum_{i=1}^{n} (X_i - \bar{X}_n)(Y_i-\bar{Y}_n) \rightarrow (X_i - \bar{X}_n)(Y_i-\bar{Y}_n)  \tag {2.1} $$ 
+
+Then we can expand the equation:
+
+$$ (X_i - \bar{X}_n)(Y_i-\bar{Y}_n) = X_iY_i - X_i\bar{Y}_n - \bar{X}_nY_i + \bar{X}_n\bar{Y}_n \tag {2.2} $$
+
+thus, we can rewrite the equation as:
+
+$$ \frac{1}{n} \sum_{i=1}^{n} (X_i - \bar{X}_n)(Y_i-\bar{Y}_n) = \frac{1}{n} \sum_{i=1}^{n} X_iY_i - \frac{1}{n} \sum_{i=1}^{n} X_i\bar{Y}_n - \frac{1}{n} \sum_{i=1}^{n} \bar{X}_nY_i + \frac{1}{n} \sum_{i=1}^{n} \bar{X}_n\bar{Y}_n \tag {2.3} $$ 
+
+Then we separate the terms:
+
+$$ \frac{1}{n} \sum_{i=1}^{n} X_iY_i - \frac{1}{n} \bar{Y}_n \sum_{i=1}^{n} X_i - \frac{1}{n} \bar{X}_n \sum_{i=1}^{n} Y_i + \frac{1}{n} \bar{X}_n \bar{Y}_n \sum_{i=1}^{n} 1 \tag {2.4} $$
+
+Then since $\sum_{i=1}^{n} X_i = n\bar{X}_n$, $\sum_{i=1}^{n} Y_i = n\bar{Y}_n$, and $\sum_{i=1}^{n} 1 = n$, this just becomes:
+
+$$ \frac{1}{n} \sum_{i=1}^{n} X_iY_i - \bar{Y}_n \bar{X}_n - \bar{X}_n \bar{Y}_n + \bar{X}_n \bar{Y}_n = \frac{1}{n} \sum_{i=1}^{n} X_iY_i - \bar{X}_n \bar{Y}_n \tag {2.5} $$
+
+Let's now look at the middle term of the equation:
+
+$$ \frac{1}{n} \sum_{i=1}^{n} X_i (Y_i - \bar{Y}_n) \rightarrow X_i (Y_i - \bar{Y}_n) \tag {2.6} $$ 
+
+Then we can expand the equation:
+
+$$ X_i (Y_i - \bar{Y}_n) = X_iY_i - X_i\bar{Y}_n \tag {2.7} $$
+
+thus, we can rewrite the equation as:
+
+$$ \frac{1}{n} \sum_{i=1}^{n} X_i (Y_i - \bar{Y}_n) = \frac{1}{n} \sum_{i=1}^{n} X_iY_i - \frac{\bar{Y}_n}{n} \sum_{i=1}^{n} X_i \tag {2.8} $$ 
+
+Then we can use the same logic as before:
+
+$$ \frac{1}{n} \sum_{i=1}^{n} X_iY_i - \frac{\bar{Y}_n}{n} \sum_{i=1}^{n} X_i = \frac{1}{n} \sum_{i=1}^{n} X_iY_i - \bar{X}_n \bar{Y}_n \tag {2.9} $$
+Finally looking at the right side of the equation:
+
+$$ \frac{1}{n} \sum_{i=1}^{n} Y_i (X_i - \bar{X}_n) \rightarrow Y_i (X_i - \bar{X}_n) \tag {2.10} $$ 
+
+Then we can expand the equation:
+
+$$ Y_i (X_i - \bar{X}_n) = X_iY_i - Y_i\bar{X}_n \tag {2.11} $$
+
+thus, we can rewrite the equation as:
+
+$$ \frac{1}{n} \sum_{i=1}^{n} Y_i (X_i - \bar{X}_n) = \frac{1}{n} \sum_{i=1}^{n} X_iY_i - \frac{\bar{X}_n}{n} \sum_{i=1}^{n} Y_i \tag {2.12} $$ 
+
+Then using same logic and substituting:
+
+$$ \frac{1}{n} \sum_{i=1}^{n} X_iY_i - \frac{\bar{X}_n}{n} \sum_{i=1}^{n} Y_i = \frac{1}{n} \sum_{i=1}^{n} X_iY_i - \bar{X}_n \bar{Y}_n \tag {2.13} $$
+
+Finally, we can see that equation (2.5), (2.9), and (2.13) are all equal to each other, thus we have shown that:
+
+$$ \frac{1}{n} \sum_{i=1}^{n} (X_i - \bar{X}_n)(Y_i-\bar{Y}_n) = \frac{1}{n} \sum_{i=1}^{n} X_i (Y_i - \bar{Y}_n) = \frac{1}{n} \sum_{i=1}^{n} Y_i (X_i - \bar{X}_n) \tag {2.14} $$
 
 \newpage
 
